--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -1,7 +1,7 @@
 <header class="header">
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-item" href="{{{or site.url siteRootPath}}}">{{site.title}}</a>
+      <a class="navbar-item" href="{{{or site.url siteRootPath}}}"><img src="https://media.licdn.com/dms/image/C4E0BAQHgP46YmRg_CQ/company-logo_200_200/0/1592424904357?e=2147483647&v=beta&t=qfZARQxuXloOfygye-GUvvPhplFeBCz3U02VT_pcrf0" alt="Apstra Logo" width="45" height="45"></a>
       {{#if env.SITE_SEARCH_PROVIDER}}
       <div class="navbar-item search hide-for-print">
         <div id="search-field" class="field">
@@ -43,3 +43,6 @@
     </div>
   </nav>
 </header>
+
+
+https://media.licdn.com/dms/image/C4E0BAQHgP46YmRg_CQ/company-logo_200_200/0/1592424904357?e=2147483647&v=beta&t=qfZARQxuXloOfygye-GUvvPhplFeBCz3U02VT_pcrf0
