--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -17,17 +17,23 @@
   --color-jet-70: #222;
   --color-jet-80: #191919;
   --color-black: #000;
+  --aj-test: #ff00c3;
+  --apstra-side-bar: #4a4a4a;
+  --apstra-top-bar: #f5f5f5;
+  --apstra-font-color: #ffffffe6;
+  --button-color: #0096a4;
+  --apstra-top-nav-font-color: #424242;
   /* fonts */
   --rem-base: 18; /* used to compute rem value from desired pixel value (e.g., calc(18 / var(--rem-base) * 1rem) = 18px) */
   --body-font-size: 1.0625em; /* 17px */
   --body-font-size--desktop: 1.125em; /* 18px */
   --body-font-size--print: 0.9375em; /* 15px */
   --body-line-height: 1.15;
-  --body-font-color: var(--color-jet-70);
-  --body-font-family: "Roboto", sans-serif;
-  --body-font-weight-bold: 500;
-  --monospace-font-family: "Roboto Mono", monospace;
-  --monospace-font-weight-bold: 500;
+  --body-font-color: var( --apstra-font-color);
+  --body-font-family: Lato,Helvetica Neue,Arial,Helvetica,sans-serif;
+  --body-font-weight-bold: 400;
+  --monospace-font-family: Lato,Helvetica Neue,Arial,Helvetica,sans-serif;
+  --monospace-font-weight-bold: 400;
   /* base */
   --body-background: var(--color-white);
   --panel-background: var(--color-smoke-30);
@@ -36,28 +42,28 @@
   --scrollbar-thumb-color: var(--color-gray-10);
   --scrollbar_hover-thumb-color: var(--color-gray-30);
   /* navbar */
-  --navbar-background: var(--color-jet-80);
-  --navbar-font-color: var(--color-white);
-  --navbar_hover-background: var(--color-black);
-  --navbar-button-background: var(--color-white);
-  --navbar-button-border-color: var(--panel-border-color);
-  --navbar-button-font-color: var(--body-font-color);
+  --navbar-background: var(--apstra-top-bar);
+  --navbar-font-color: var( --apstra-top-nav-font-color);
+  --navbar_hover-background: var(--color-whiter);
+  --navbar-button-background: var(--button-color);
+  --navbar-button-border-color: var(--button-color);
+  --navbar-button-font-color: var(--apstra-top-nav-font-color);
   --navbar-menu-border-color: var(--panel-border-color);
   --navbar-menu-background: var(--color-white);
-  --navbar-menu-font-color: var(--body-font-color);
+  --navbar-menu-font-color: var(--apstra-top-nav-font-color);
   --navbar-menu_hover-background: var(--color-smoke-50);
   /* nav */
-  --nav-background: var(--panel-background);
-  --nav-border-color: var(--color-gray-10);
-  --nav-line-height: 1.35;
-  --nav-heading-font-color: var(--color-jet-30);
+  --nav-background: var(--apstra-side-bar);
+  --nav-border-color: var(--button-color);
+  --nav-line-height: 1.5;
+  --nav-heading-font-color: var( --apstra-font-color);
   --nav-muted-color: var(--color-gray-70);
   --nav-panel-divider-color: var(--color-smoke-90);
   --nav-secondary-background: var(--color-smoke-70);
   /* toolbar */
   --toolbar-background: var(--panel-background);
   --toolbar-border-color: var(--panel-border-color);
-  --toolbar-font-color: var(--color-gray-70);
+  --toolbar-font-color: var( --apstra-font-color);
   --toolbar-muted-color: var(--color-gray-40);
   --page-version-menu-background: var(--color-smoke-70);
   --page-version-missing-font-color: var(--color-gray-40);
